--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="example"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="{google_maps_api_key}"/>
+            android:value="{google_map_api_key}"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
