--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.1.0 <3.0.0'
+  sdk: '>=2.3.0 <3.0.0'
   flutter: '>=1.22.0 <2.0.0'
 
 dependencies:
@@ -29,10 +29,13 @@ dependencies:
   uuid: ^2.2.2
   google_maps_flutter: ^1.0.3
   location: ^3.0.2
-  flutter_background_geolocation: ^1.10.1
   http: ^0.12.2
   flutter_polyline_points: ^0.2.4
   flutter_dotenv: ^2.1.0
+  firebase_core: ^0.5.1
+  firebase_auth: ^0.18.2
+  cloud_firestore: ^0.14.2
+  google_sign_in: ^4.5.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
