--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,24 +18,35 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.3.0 <3.0.0'
+  sdk: '>=2.10.0 <3.0.0'
   flutter: '>=1.22.0 <2.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_callkeep: ^0.1.8
-  flutter_call_kit: ^0.0.2
   uuid: ^2.2.2
   google_maps_flutter: ^1.0.3
-  location: ^3.0.2
   http: ^0.12.2
   flutter_polyline_points: ^0.2.4
   flutter_dotenv: ^2.1.0
-  firebase_core: ^0.5.1
-  firebase_auth: ^0.18.2
-  cloud_firestore: ^0.14.2
+  firebase_core: ^0.5.2
+  firebase_auth: ^0.18.3+1
+  cloud_firestore: ^0.14.3+1
   google_sign_in: ^4.5.5
+  workmanager: ^0.2.3
+  geolocator: ^6.1.8+1
+  flutter_local_notifications: ^3.0.1+3
+  permissions_plugin: ^1.1.4
+  shared_preferences: ^0.5.12+4
+  state_notifier: ^0.6.0
+  hooks_riverpod: ^0.12.1
+  flutter_hooks: ^0.15.0
+  json_serializable: ^3.5.0
+  freezed_annotation: ^0.12.0
+  enum_to_string: ^1.0.14
+  dio: ^3.0.10
+  dio_http_cache: ^0.2.11
+  dio_firebase_performance: ^0.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -43,6 +54,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  freezed: ^0.12.3
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
